<resources>
    <string name="app_name">Proyecto Zero</string>
    <string name="title_activity_main">Proyecto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_dashboard" translatable="false">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_accounts">My accounts</string>
    <string name="menu_transactions">Transactions</string>
    <string name="project_abbreviation" translatable="false">PZ</string>
    <string name="menu_tag">Tags</string>

    //TreeView Sample
    <string name="ic_keyboard_arrow_right">&#xe0c7;</string>
    <string name="ic_email">&#xe087;</string>
    <string name="ic_close">&#xe048;</string>
    <string name="ic_add">&#xe006;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="ic_keyboard_arrow_down">&#xe0c5;</string>
    <string name="sNewCategory">New Category</string>
    <string name="sEditCategory">Edit category</string>
</resources>
