<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/menu_tag" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
    </group>
</menu>
